force-app/main/default/objects/Care_Settings__c/Care_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Care Settings</label>
</CustomObject>