force-app/main/default/objects/Care_Settings__c/fields/Add_Contact_Batch_Timeout_Milliseconds__c.field-meta.xml
<CustomField>
    <fullName>Add_Contact_Batch_Timeout_Milliseconds__c</fullName>
    <description>Add Contact Batch Timeout in milliseconds</description>
    <label>Add Contact Batch Timeout Milliseconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>