force-app/main/default/objects/Care_Settings__c/fields/Add_Marketing_Prefs_Timeout_Milliseconds__c.field-meta.xml
<CustomField>
    <fullName>Add_Marketing_Prefs_Timeout_Milliseconds__c</fullName>
    <label>Add Marketing Prefs Timeout Milliseconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>