force-app/main/default/objects/Care_Settings__c/fields/Add_Membership_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Add_Membership_Batch_Size__c</fullName>
    <label>Add Membership Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>