force-app/main/default/objects/Care_Settings__c/fields/Default_Timeout_Milliseconds__c.field-meta.xml
<CustomField>
    <fullName>Default_Timeout_Milliseconds__c</fullName>
    <label>Default Timeout Milliseconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>