force-app/main/default/objects/Care_Settings__c/fields/SF_Environment_Name__c.field-meta.xml
<CustomField>
    <fullName>SF_Environment_Name__c</fullName>
    <description>Name of page / system calling the service for fault tracking information
Can contain the value: SalesforceSBASandbox</description>
    <label>SF Environment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>