force-app/main/default/objects/Care_Settings__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Should contain the value: SALESFORCE</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>