force-app/main/default/objects/Care_Settings__c/fields/User_Log_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Log_Name__c</fullName>
    <label>User Log Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>